--- a/contents/06-nonsupervisee.html
+++ b/contents/06-nonsupervisee.html
@@ -580,7 +580,7 @@ window.Quarto = {
 </ul>
 </li>
 <li><p>TD: <a href="../td/06-unsupervised-td.html">link</a></p></li>
-<li><p>TP: <a href="../td/06-unsupervised-tp.qmd">link</a></p></li>
+<li><p>TP: <a href="../tp/06-unsupervised-tp.html">link</a></p></li>
 </ul>
 <section id="sommaire" class="level2"><h2 class="anchored" data-anchor-id="sommaire">Sommaire</h2>
 <ol type="1">
