deploy: beff773bebbd6480075b725ea8ef98fa9515c930

--- a/contents/04-dimension.html
+++ b/contents/04-dimension.html
@@ -578,7 +578,12 @@ window.Quarto = {
 <li><p><a href="../slides/04-dimension-mca-slides.html">Analyse des correspondances multiples</a> - <a href="../slides/04-dimension-mca-slides-annotated.html">annoté</a></p></li>
 </ul>
 </li>
-<li><p>TD: <a href="../td/04-dimension-td.html">link</a></p></li>
+<li>
+<p>TD: <a href="../td/04-dimension-td.html">link</a></p>
+<ul>
+<li><a href="../td/correction/Td_%20Dimension.pdf">Corrigé</a></li>
+</ul>
+</li>
 <li><p>TP: <a href="../tp/04-dimension-tp.html">link</a></p></li>
 </ul>
 <section id="sommaire" class="level2"><h2 class="anchored" data-anchor-id="sommaire">Sommaire</h2>
